fixed career view on mobile

--- a/css/career.css
+++ b/css/career.css
@@ -714,7 +714,7 @@
     width: 100%;
     padding: 50px 50px;
     background-color: #F3F3F3;
-    margin-top: 20px;
+ 
     font-weight: 300;
     
 }
@@ -723,7 +723,7 @@
     width: 100%;
     padding: 50px 50px;
     background-color: #F3F3F3;
-    margin-top: 20px;
+ 
     font-weight: 300;
 }
 
@@ -731,7 +731,7 @@
     width: 100%;
     padding: 50px 50px;
     background-color: #F3F3F3;
-    margin-top: 20px;
+
     font-weight: 300;
 
 }
